--- a/themes/delphinepythonique/templates/base.html
+++ b/themes/delphinepythonique/templates/base.html
@@ -59,8 +59,8 @@
 
                                     </div>
                                        <div class=" card-action  ">
-                                           <span><a href="{{CV_URL}}">Curriculum Vitae</a></span>
-                                           <span><a href="{{CV_DETAIL_URL}}">Curriculum Vitae détaillé</a></span>
+                                           <span><a href="{{CV_URL}}">Curriculum Vitae <i class="tiny material-icons">file_download</i></a></span>
+                                           <span><a href="{{CV_DETAIL_URL}}">Curriculum Vitae détaillé <i class="tiny material-icons">file_download</i></a></span>
                                        </div>
                                     <div class=" card-action  ">
                                          <div  class="social"  >
