--- a/themes/delphinepythonique/templates/base.html
+++ b/themes/delphinepythonique/templates/base.html
@@ -75,10 +75,9 @@
                                     <ul class="collection with-header">
                                         <li class="collection-header"><h4>Categories de projets</h4></li>
                                         <li class="collection-item"><a href="{{ SITEURL }}/category/certification-developpeur-python.html">Certification développeur python 2022-2023</a></li>
-
+                                        <li class="collection-item"><a href="{{ SITEURL }}/category/experience-professionnelle.html">Expérience développeur 2000 à 2021</a></li>
+                                        <li class="collection-item"><a href="{{ SITEURL }}/category/animation.html">Augmenter la productivité par l'animation</a></li>
                                     </ul>
-
-
                                 </div>
                               </div>
 
